[gd_scene load_steps=6 format=2]

[ext_resource path="res://level2/platformer/enemeis/rolling_spikeball.gd" type="Script" id=1]
[ext_resource path="res://level2/platformer/enemeis/rolling_spikeball.png" type="Texture" id=2]
[ext_resource path="res://light.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.5, 8.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 162, 74.5 )

[node name="KinematicBody2D" type="KinematicBody2D" groups=["enemy", "spikeball"]]
position = Vector2( -1, -12 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3, 3 )
texture = ExtResource( 2 )
hframes = 3
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 3, 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -4, -65.5 )
shape = SubResource( 2 )

[node name="Roll_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="freeze_timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 1, 3.12499 )
scale = Vector2( 0.33252, 0.255615 )
texture = ExtResource( 3 )
energy = 0.75

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Roll_timer" to="." method="_on_Roll_timer_timeout"]
[connection signal="timeout" from="freeze_timer" to="." method="_on_freeze_timer_timeout"]
